# slcnn

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
sl/: CMakeLists.txt  sl.h
src/: Test.cpp  Test.h  main.cpp  slcnn.h
src/framework/: Batch.cpp  Batch.h  Helper.h  Layer.h  Log.cpp  Log.h  Map.h  Net.cpp  Net.h  Tensor.cpp  Tensor.h  Timer.h
src/layer/: ActivationLayer.cpp  ActivationLayer.h  BatchNormLayer.cpp  BatchNormLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  MaxPoolLayer.cpp  MaxPoolLayer.h  ReLuLayer.cpp  ReLuLayer.h  SoftmaxLayer.cpp  SoftmaxLayer.h
